[project]
name = "q3-tts"
version = "0.1.0"
description = "CLI tool for text-to-speech using Qwen3-TTS with voice cloning support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "Martin" }]
keywords = ["tts", "text-to-speech", "voice-cloning", "qwen3", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "transformers>=5.0.0rc1",
    "mlx-audio>=0.3.0",
    "typer",
    "numpy",
    "soundfile",
    "scipy",
]

[project.scripts]
q3-tts = "q3_tts:app"

[project.urls]
Repository = "https://github.com/martin/voice-cloning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
]
